import { CardDesigns, CardIconType, CardIssuer, CardStatus, CardType, CardsResponse } from '@cards/types';

export const getMockCards = (): CardsResponse => {
    return [
        {
            id: 'card-1',
            name: 'Mortgage Payments',
            designId: CardDesigns.Obsidian,
            iconType: CardIconType.CARD,
            status: CardStatus.ACTIVE,
            maskedPan: '999988******1234',
            type: CardType.PHYSICAL,
            expiryDate: '2030-04-15',
            issuer: CardIssuer.VISA,
            cardholderName: 'Oliver Bennett',
        },
        {
            id: 'card-2',
            name: 'Shopping Card',
            designId: CardDesigns.Emerald,
            iconType: CardIconType.CARD,
...
